--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
     <form name="loginForm" id="login" method="post" >
         <p>
-            <label class="stepcount" for="username">Email Address</label><br>
-            <input class="stepcount" type="text" id="username" name="username" size="25" onchange="setusername()" required >
+            <label class="stepcount" for="phonenumber">Phone Number</label><br>
+            <input class="stepcount" type="text" id="phonenumber" name="phonenumber" size="15" onchange="setphonenumber()" required >
         </p>
         <p>
+            <input class="btn btn-lg btn-primary" id="sendtextbutton" type="button" onclick="sendtext()" value="Send Text">
+        </p>
+        <p>
+            
             <label class="stepcount" for="password">Password</span></label><br>
             <input class="stepcount" type="password" id="password" name="pwd" size="25" onchange="setuserpassword()" required >
         </p>
@@ -37,5 +41,5 @@
 
 <script src="jquery-3.1.1.min.js"></script>
 <script src="manageuser.js"></script>
-<script src="managecustomer.js"></script>
+
 </html>
