Enabled one time password login

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         <p>
             
-            <label class="stepcount" for="password">Password</span></label><br>
+            <label class="stepcount" for="password"> One Time Password</span></label><br>
             <input class="stepcount" type="password" id="password" name="pwd" size="25" onchange="setuserpassword()" required >
         </p>
         <p>
